fix: changes all gaps to margin

--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -278,7 +278,7 @@ a {
 
    &__row {
       @include flexbox();
-      column-gap: calc((60 / 1200) * 100%);
+      justify-content: space-between;
 
       &_1 {
          margin-bottom: 30px;
@@ -291,7 +291,6 @@ a {
    @media (max-width: 980px) {
       &__row {
          flex-direction: column;
-         gap: 30px;
       }
 
       &__column {
@@ -311,6 +310,7 @@ a {
          justify-content: space-between;
          align-items: flex-start;
          width: 100%;
+         margin-bottom: 30px;
       }
       &_text {
          background-color: rgba(111, 190, 151, 0.418);
@@ -380,10 +380,8 @@ a {
    &__body {
       @include flexbox();
       justify-content: space-between;
-      column-gap: calc((66 / 1200) * 100%);
       @media (max-width: 980px) {
          flex-direction: column;
-         gap: 20px;
       }
    }
 
@@ -392,12 +390,15 @@ a {
       align-items: flex-start;
       justify-content: space-between;
       flex: 0 0 46%;
-      column-gap: calc((20 / 552) * 100%);
+      @media (max-width: 980px) {
+         margin-bottom: 20px;
+      }
    }
 
    &__brand {
       flex: 0 0 calc((196 / 552) * 100%);
       padding: 0 0 22% 0;
+      margin-right: calc((20 / 552) * 100%);
       @media (max-width: 980px) {
          padding: 0 0 24% 0;
       }
@@ -461,7 +462,6 @@ a {
    &__steps {
       display: flex;
       justify-content: space-between;
-      gap: 30px;
    }
 }
 
@@ -476,6 +476,7 @@ a {
    }
 
    &__step {
+      margin: 0 0 30px 0;
       @media (max-width: 980px) {
          flex: 0 0 48%;
       }
@@ -493,7 +494,6 @@ a {
 
    &__title {
       display: flex;
-      gap: 15px;
       align-items: center;
       margin-bottom: 10px;
    }
@@ -506,6 +506,7 @@ a {
       text-align: center;
       font-size: 2.1em;
       line-height: 60px;
+      margin-right: 15px;
       span {
          display: block;
       }
@@ -528,7 +529,6 @@ a {
          padding: 0 0 0 26px;
          display: flex;
          flex-direction: column;
-         gap: 5px;
       }
 
       &_2 {
@@ -541,7 +541,7 @@ a {
    &__social-link {
       display: flex;
       align-items: center;
-      gap: 6px;
+      margin: 0 0 5px 0;
    }
 
    &__list {
@@ -590,6 +590,7 @@ a {
    &__logo {
       width: 40px;
       height: 40px;
+
       &_3 {
          margin: 2px 4px 0 5px;
          width: 31px;
@@ -615,6 +616,10 @@ a {
       margin-right: auto;
    }
 
+   @media (max-width: 977px) {
+      padding-top: 20px;
+   }
+
    @media (max-width: 800px) {
       align-self: flex-end;
       margin-right: 0;
@@ -627,10 +632,6 @@ a {
    }
    &__form {
       display: flex;
-      gap: 40px;
-      @media (max-width: 980px) {
-         flex-direction: column;
-      }
 
       &_input {
          width: 290px;
@@ -639,6 +640,9 @@ a {
             width: 260px;
             height: 60px;
          }
+      }
+      &_input {
+         margin: 0 30px 0 0;
       }
 
       &_input input::placeholder {
@@ -662,6 +666,13 @@ a {
       }
       &_btn:hover {
          background: #5f1d58;
+      }
+
+      @media (max-width: 980px) {
+         flex-direction: column;
+         &_input {
+            margin: 0 0 30px 0;
+         }
       }
    }
 }
